2008-02-19  Richard Sandiford  <rsandifo@nildram.co.uk>

	* g++.dg/other/anon5.C: Skip for MIPS ELF targets.

2008-02-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/35227
	* gcc.dg/torture/pr35227.c: New testcase.

2008-02-17  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/35231
	* gcc.c-torture/execute/pr35231.c: New testcase.

2008-02-17  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/pr32268.c (test_lt): Add noinline attribute.
	(test_gt): Ditto.

2008-02-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* obj-c++.dg/encode-2.mm: XFAIL.
	* obj-c++.dg/encode-3.mm: Likewise.

2008-02-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
	    Paolo Carlini  <pcarlini@suse.de>

	* g++.dg/ext/has_nothrow_assign.C: Skip some tests when __PIC__.
	* g++.dg/ext/has_nothrow_constructor.C: Likewise.
	* g++.dg/ext/has_nothrow_copy.C: Likewise.

2008-02-16  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/fastcall-sseregparm.c: Include sse-check.h.
	(main): Change to void and rename to sse_test.
	* gcc.target/i386/pr24306.c: Ditto.
	* gcc.target/i386/pr32065-2.c: Ditto.
	* gcc.target/i386/20060512-1.c: Include sse2-check.h.
	(main): Change to void and rename to sse2_test.
	* gcc.target/i386/20060512-3.c: Ditto.

2008-02-15  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/35150
	* gfortran.dg/c_loc_tests_12.f03: New test.

2008-02-15  Douglas Gregor  <doug.gregor@gmail.com>

	PR c++/35023
	PR c++/35024
	PR c++/35026
	* g++.dg/cpp0x/vt-35026.C: New.
	* g++.dg/cpp0x/vt-35023.C: New.
	* g++.dg/cpp0x/vt-34055.C: Tweak expected error messages.
	* g++.dg/cpp0x/vt-35024.C: New.

2008-02-15  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.c-torture/execute/va-arg-25.x: Remove.

2008-02-15  Richard Guenther  <rguenther@suse.de>
	    Zdenek Dvorak  <ook@ucw.cz>

	PR tree-optimization/35164
	* g++.dg/torture/pr35164-1.C: New testcase.
	* g++.dg/torture/pr35164-2.C: Likewise.

2008-02-15  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR testsuite/35119