@@ -1,6 +1,7 @@
 /* Test floating-point conversions.  Standard types and long double.  */
 /* Origin: Joseph Myers <joseph@codesourcery.com> */
-/* { dg-do run } */
+/* Skipped for MIPS16 targets because of PR 35232 */
+/* { dg-do run { target { { ! mips*-*-* } || nomips16 } } } */
 /* { dg-options "" } */
 
 #include <float.h>
